2006-07-14  Mukund Sivaraman  <muks@mukund.org>

	* app/config/gimpbaseconfig.c: if possible, detect the number of
	online CPUs in the system and use that instead of the default value
	of 2 for the number of pixel processors. Also made the default value
	1 where it's not possible to detect the number of CPUs. Uses twice
	the number for development versions.

2006-07-13  Sven Neumann  <sven@gimp.org>

	* app/display/gimpstatusbar.c (gimp_statusbar_set_cursor): set the
	sensitivity of the cursor label before converting the coordinates
	to the display unit (bug #347339).

2006-07-13  Sven Neumann  <sven@gimp.org>

	* plug-ins/bmp/bmp.[ch]
	* plug-ins/bmp/bmpwrite.c: simplified run() method, renamed a
	variable.

2006-07-13  Sven Neumann  <sven@gimp.org>

	* tools/gimp-remote.c: increased timeout to 5 seconds (bug #347345).

2006-07-12  Sven Neumann  <sven@gimp.org>

	* plug-ins/bmp/bmp.[ch]
	* plug-ins/bmp/bmpread.c
	* plug-ins/bmp/bmpwrite.c: applied a slightly modified patch from
	Piotr Filiciak that adds support for 16/32 bit bitmaps and support
	for alpha channel (bug #342355).

2006-07-12  Sven Neumann  <sven@gimp.org>

	* app/actions/file-commands.c
	* app/pdb/gimppluginprocedure.c: formatting.

2006-07-11  Sven Neumann  <sven@gimp.org>

	* app/xcf/xcf-write.[ch]: added const qualifiers.

2006-07-11  Sven Neumann  <sven@gimp.org>

	* app/xcf/xcf-load.c
	* app/xcf/xcf-private.h
	* app/xcf/xcf-save.c
	* app/xcf/xcf.c: do progress updates when loading/saving XCF files. 

2006-07-11  Sven Neumann  <sven@gimp.org>

	* app/xcf/xcf.c: minor cleanup.

	* app/core/gimpimage-merge.[ch]: made gimp_image_merge_layers() a
	static function, it isn't used outside this file.

2006-07-10  Sven Neumann  <sven@gimp.org>

	* app/xcf/xcf-load.c: use a signed variable when attempting to
	skip over unknown properties and check for EOF.  Fixes bug #345802.

	* app/xcf/xcf-read.c: cleanup, nothing really changed

2006-07-10  Sven Neumann  <sven@gimp.org>
