@@ -1,3 +1,9 @@
+2006-07-14  Maurits  <m.rijk@chello.nl>
+
+	* plug-ins/imagemap/imap_grid.c
+	* plug-ins/imagemap/imap_main.c
+	* plug-ins/imagemap/imap_menu.c: fixed problem with zoom menu
+
 2006-07-14  Mukund Sivaraman  <muks@mukund.org>
 
 	* app/config/gimpbaseconfig.c: if possible, detect the number of
